--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <head>
-            <img src="download.png" alt="Banner" width "1200" height="300">
+            <img src="download.png" alt="Banner" width="1200" height="300">
         <head>
       <h2>URN 1234567 </h2>
     </head>
