--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <html>
 
     <head>
-        <head>
-            <img src="University of Surrey logo 2107x780px.png" alt="Banner" width="1200" height="300">
-        <head>
-      <h2>URN 1234567 </h2>
+        <img src="University of Surrey logo 2107x780px.png" alt="Banner" width="1000" height="300">
+        <h1><b>ENG0018 Computer Laboratory 2023/24</b></h1>
+        <h2>Student URN: 6797020 </h2>
     </head>
 </html>
