--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html>
 
     <head>
-        <img src="University of Surrey logo 2107x780px.png" alt="Banner" width="1000" height="300">
-        <h1><b>ENG0018 Computer Laboratory 2023/24</b></h1>
-        <h2>Student URN: 6797020 </h2>
+        <img src="University of Surrey logo 2107x780px.png" alt="Banner" width="700" height="200">
+            <h1><b>ENG0018 Computer Laboratory 2023/24</b></h1>
+            <h2>Student URN: 6797020 </h2>
+        <hr>
+        <h2 style=”fontfamily:calibri:”><b>Conference paper: Bridge Deck Repairs</b></h2>
+        <hr>
     </head>
 </html>
