--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 
 <html>
+    <style>
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 30%;
 
+        }
+        tf, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #ddddd;
+        }
+    </style>
+    <style>
+        p.ex1 {
+            margin-left: 250px;
+        }
+    </style>
     <head>
         <img src="University of Surrey logo 2107x780px.png" alt="Banner" width="700" height="200">
             <h1><b>ENG0018 Computer Laboratory 2023/24</b></h1>
