--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
             width: 30%;
 
         }
-        tf, th {
+        td, th {
             border: 1px solid #dddddd;
             text-align: left;
             padding: 8px;
         }
 
         tr:nth-child(even) {
-            background-color: #ddddd;
+            background-color: #dddddd;
         }
     </style>
     <style>
