--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <hr>
         <h2 style=”fontfamily:calibri:”><b>Conference paper: Bridge Deck Repairs</b></h2>
         <hr>
+            
             <style>
             table {
                 font-family: arial, sans-serif;
@@ -24,11 +25,16 @@
             tr:nth-child(even) {
                 background-color: #dddddd;
             }
-        </style>
+            </style>
         <style>
-            p.ex1 {
-                margin-left: 250px;
-            }
+    p.ex1 {
+        margin-left: 250px;
+    }
         </style>
-    </head>
+            </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+        .mySlides {display:none;}
+    </style>
 </html>
