--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     <style>
     .mySlides {display:none;}
     </style>
-    <body style="background-color:#FFFFFF;margin-left:50px;">
+    <body style="background-color:#c2b4b4;margin-left:50px;">
     <h3 id="Abstract">Abstract</h3>
 </html>
