--- a/index.html
+++ b/index.html
@@ -38,5 +38,22 @@
     .mySlides {display:none;}
     </style>
     <body style="background-color:#c2b4b4;margin-left:50px;">
-    <h3 id="Abstract">Abstract</h3>
+        <table>
+
+            <tr>
+                <th><h3>Table of contents</h3></th>
+            </tr>
+            <tr>
+                <td><a href="#Abstract">Abstract</td>
+            </tr>
+            <tr>
+                <td><a href="Introduction">Introduction</td>
+            </tr>
+            <tr>
+                <td><a href="Analysis and discussion">Analysis and discussion</td>
+            </tr>
+            <tr>
+                <td><a href="References">References</td>
+            </tr>
+        </table>
 </html>
