--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
             </tr>
         </table>
         <h3 id="Abstract">Abstract</h3>
-            <pre>This paper presents a novel adaptive active learning strategy. The most accurate classification model
-from a heterogeneous classifier pool is selected at each learning epoch. Our goal is to achieve greater
-incremental improvement in accuracy, compared to using a single type of classification model
-throughout the process. The strategy is evaluated on benchmark data sets. We further consider an
-application to texture classification problems in sonar mosaic imagery and compare it with nonadaptive active learning and traditional machine learning approaches. Our results show that…We
-conclude that…
+                <pre>This paper presents a novel adaptive active learning strategy. The most accurate classification 
+    model from a heterogeneous classifier pool is selected at each learning epoch. Our goal is to achieve 
+    greater incremental improvement in accuracy, compared to using a single type of classification model
+    throughout the process. The strategy is evaluated on benchmark data asets. We further consider an
+    application to texture classification problems in sonar mosaic imagery and compare it with nonadaptive active 
+    learning and traditional machine learning approaches. Our results show that…We conclude that…
             </pre>
         <h3 id=”Introduction”>Introduction</h3>
-            <pre>Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
-intelligent machine through the interaction of an oracle with the machine system, over a sequence of
+            <pre>Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt 
+by an intelligent machine through the interaction of an oracle with the machine system, over a sequence of
 learning epochs. A distinctive component in an active system is the querying strategy, used to sample
 candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
 to improve the classification model. Various strategies have been proposed including; Query by
@@ -83,7 +83,7 @@ classifier confidence to drop, as in Vlachos (2008).</pre>
             <pre>
 Bridge deck repair durability is the subject of much recent research such as in <a href=”https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034”>Toshihiko et al(2023).</a>
 
-                Table1: Data on cost and lifespan of bridge repairs
+Table 1: Data on cost and lifespan of bridge repairs
                 <table>
                 <tr>
                     <th>£ Cost of repairs</th>
