--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <h1><b>ENG0018 Computer Laboratory 2023/24</b></h1>
             <h2>Student URN: 6797020 </h2>
         <hr>
-        <h2 style=”fontfamily:calibri:”><b>Conference paper: Bridge Deck Repairs</b></h2>
+        <h2 style="font-family: calibri;"><b>Conference paper: Bridge Deck Repairs</b></h2>
         <hr>
             
             <style>
@@ -44,45 +44,45 @@
                 <th><h3>Table of contents</h3></th>
             </tr>
             <tr>
-                <td><a href="#Abstract">Abstract</td>
+                <td><a href="#Abstract">Abstract</a></td>
             </tr>
             <tr>
-                <td><a href="#Introduction">Introduction</td>
+                <td><a href="#Introduction">Introduction</a></td>
             </tr>
             <tr>
-                <td><a href="#Analysis and discussion">Analysis and discussion</td>
+                <td><a href="#Analysis_and_discussion">Analysis and discussion</a></td>
             </tr>
             <tr>
-                <td><a href="#References">References</td>
+                <td><a href="#References">References</a></td>
             </tr>
         </table>
         <h3 id="Abstract">Abstract</h3>
-                <pre>This paper presents a novel adaptive active learning strategy. The most accurate classification 
-    model from a heterogeneous classifier pool is selected at each learning epoch. Our goal is to achieve 
-    greater incremental improvement in accuracy, compared to using a single type of classification model
-    throughout the process. The strategy is evaluated on benchmark data asets. We further consider an
-    application to texture classification problems in sonar mosaic imagery and compare it with nonadaptive active 
-    learning and traditional machine learning approaches. Our results show that…We conclude that…
+                <pre>  This paper presents a novel adaptive active learning strategy. The most accurate classification 
+  model from a heterogeneous classifier pool is selected at each learning epoch. Our goal is to achieve 
+  greater incremental improvement in accuracy, compared to using a single type of classification model
+  throughout the process. The strategy is evaluated on benchmark datasets. We further consider an
+  application to texture classification problems in sonar mosaic imagery and compare it with nonadaptive active 
+  learning and traditional machine learning approaches. Our results show that…We conclude that…
             </pre>
-        <h3 id=”Introduction”>Introduction</h3>
-            <pre>Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt 
-by an intelligent machine through the interaction of an oracle with the machine system, over a sequence of
-learning epochs. A distinctive component in an active system is the querying strategy, used to sample
-candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
-to improve the classification model. Various strategies have been proposed including; Query by
-Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty
-sampling (Lewis and Gale, 1994) and version space reduction (margin sampling) (Tong and Koller,
-2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
-presented for labeling, to a machine (database) or human oracle that has knowledge of the class
-labels. After adding the newly labeled instances to the current training set, a revised model is
-subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
-learning at each epoch. The process is continued until some stopping criterion has been met, such as
-reaching a stage where information from the selected instances is contrary to the model, causing the
-classifier confidence to drop, as in Vlachos (2008).</pre>
-        <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
+        <h3 id="Introduction">Introduction</h3>
+              <pre>  Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt 
+  by an intelligent machine through the interaction of an oracle with the machine system, over a sequence of
+  learning epochs. A distinctive component in an active system is the querying strategy, used to sample
+  candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
+  to improve the classification model. Various strategies have been proposed including; Query by
+  Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty
+  sampling (Lewis and Gale, 1994) and version space reduction (margin sampling) (Tong and Koller,
+  2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
+  presented for labeling, to a machine (database) or human oracle that has knowledge of the class
+  labels. After adding the newly labeled instances to the current training set, a revised model is
+  subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
+  learning at each epoch. The process is continued until some stopping criterion has been met, such as
+  reaching a stage where information from the selected instances is contrary to the model, causing the
+  classifier confidence to drop, as in Vlachos (2008).</pre>
+        <h3 id="Analysis_and_discussion">Analysis and discussion</h3>
             <pre>
-Bridge deck repair durability is the subject of much recent research such as in <a href=”https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034”>Toshihiko et al(2023).</a>
-
+Bridge deck repair durability is the subject of much recent research such as in <a href="https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034">Toshihiko et al(2023).</a>
+  
 Table 1: Data on cost and lifespan of bridge repairs
                 <table>
                 <tr>
@@ -111,20 +111,20 @@ Table 1: Data on cost and lifespan of bridge repairs
                 </tr>
                 </table>
             </pre>
-        <h3 id=”References”>References</h3>
-        <pre>Angluin, D (1988), Queries and concept learning. Machine learning 2, (4), 319-342.
-
-Brinker, K (2003), Incorporating Diversity in Active Learning with Support Vector Machines,
-Proceedings of the Twentieth International Conference on Machine Learning (ICML-2003).
-
-Bruzzone, L, Chi, M and Harconcini, M (2006), A novel transductive SVM for semisupervised classication of remote-sensing images,
-IEEE Transactions on Geoscience and Remote Sensing, 44, (11), 3363.
-
-Bruzzone, L and Persello, C (2009), Active learning for classification of remote sensing images.
-In: Geoscience and Remote Sensing Symposium, 2009 IEEE International, IGARSS 2009, 3.
-
-Campbell, C, Cristianini, N and Smola, A (2000), Query learning with large margin classifiers.
-In: Proc. 17th Internet. (onion Machine Learning. Morgan Kaufman, Stanford, CA,111-118.
+        <h3 id="References">References</h3>
+          <pre>  Angluin, D (1988), Queries and concept learning. Machine learning 2, (4), 319-342.
+  
+  Brinker, K (2003), Incorporating Diversity in Active Learning with Support Vector Machines,
+  Proceedings of the Twentieth International Conference on Machine Learning (ICML-2003).
+  
+  Bruzzone, L, Chi, M and Harconcini, M (2006), A novel transductive SVM for semisupervised classication of remote-sensing images,
+  IEEE Transactions on Geoscience and Remote Sensing, 44, (11), 3363.
+  
+  Bruzzone, L and Persello, C (2009), Active learning for classification of remote sensing images.
+  In: Geoscience and Remote Sensing Symposium, 2009 IEEE International, IGARSS 2009, 3.
+  
+  Campbell, C, Cristianini, N and Smola, A (2000), Query learning with large margin classifiers.
+  In: Proc. 17th Internet. (onion Machine Learning. Morgan Kaufman, Stanford, CA,111-118.
 </pre>
     </body>
 </html>
