--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <img src="University of Surrey logo 2107x780px.png" alt="Banner" width="700" height="200">
+        <img src="Logo.png" alt="Banner" width="700" height="200">
             <h1><b>ENG0018 Computer Laboratory 2023/24</b></h1>
             <h2>Student URN: 6797020 </h2>
         <hr>
