--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
-      max-width: 800px;
+      max-width: 100%;
     }
 
     table {
