--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
-      max-width: 100%;
+      max-width: 75%;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     table {
