--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           background-size: cover;
           background-repeat: no-repeat;
           background-position: center center;
-          background-attachment: fixed;
+          background-attachment: scroll;
           color: white;
           font-family: Arial, sans-serif;
           text-align: center;
